fix(style): remove the unnecessary horizontal scroll

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -19,7 +19,6 @@
     .listElement {
         display: block;
         overflow: auto;
-        width: 100%;
 
         .message {
             display: inline-block;
